--- a/subtriangles.html
+++ b/subtriangles.html
@@ -10,6 +10,8 @@
     tex2jax: {inlineMath: [["$","$"]]}
    });
   </script> 
+  <script src="youtube_keys.js"></script>  
+  <script src="comb.js"></script>  
   <style type="text/css">
    div#main_div { 
     position:absolute; 
@@ -51,7 +53,7 @@
    bin.m = 0;
    bin.val = 0;
 
-   var demo = {};
+   var demo = Object.create(comb.demo);
 
    demo.f = function(n,k,m,x) {
     return Math.round((0.5 * k - 0.5 * m + 0.5 * this.n_max + 4.5 + x) * this.scale); 
@@ -72,22 +74,17 @@
 
    demo.init = function() {
     var i,j,k,n,x,x0,x1,y0,y1,p;
+
+    this.name = 'subtriangles';
+    
     var me = this;
     this.n_max = 6;
     this.scale = 80;
     this.mode = 'random';
 
-    this.main_svg = document.getElementById('main_svg');
-    this.msg_div  = document.getElementById('msg_div');
-    this.partial_div = document.getElementById('partial');
-
-    this.random_button = document.getElementById('random');
-    this.count_button = document.getElementById('count');
+    this.find_ids(['partial_div','random_button','count_button','random_msg','count_msg']);
     this.random_button.onclick = function() { me.set_random_mode(); }
     this.count_button.onclick = function() { me.set_count_mode(); }
-
-    this.random_msg = document.getElementById('random_msg');
-    this.count_msg = document.getElementById('count_msg');
 
     this.bins = {};
     this.bins_list = [];
@@ -103,11 +100,7 @@
      x0 = this.f(0,n,0,0);
      x1 = this.f(0,0,n,0);
      y0 = this.g(0,0,n,0);
-     p = 'M ' + x0 + ' ' + y0 + ' L ' + x1 + ' ' + y0;
-     this.n_line[n] = document.createElementNS('http://www.w3.org/2000/svg', 'path');
-     this.n_line[n].setAttribute('stroke','#DDDDDD');
-     this.n_line[n].setAttribute('stroke-width',4);
-     this.n_line[n].setAttribute('d',p);
+     this.n_line[n] = comb.svg.line(x0,y0,x1,y0,'#DDDDDD',4);
      this.main_svg.appendChild(this.n_line[n]);
     }
 
@@ -116,11 +109,8 @@
      y0 = this.g(0,k,0,0);
      x1 = this.f(0,k,this.n_max+1-k,0);
      y1 = this.g(0,k,this.n_max+1-k,0);
-     p = 'M ' + x0 + ' ' + y0 + ' L ' + x1 + ' ' + y1;
-     this.k_line[k] = document.createElementNS('http://www.w3.org/2000/svg', 'path');
-     this.k_line[k].setAttribute('stroke','#DDDDDD');
-     this.k_line[k].setAttribute('stroke-width',4);
-     this.k_line[k].setAttribute('d',p);
+     this.k_line[k] = comb.svg.line(x0,y0,x1,y1,'#DDDDDD',4);
+     this.main_svg.appendChild(this.k_line[k]);
      this.main_svg.appendChild(this.k_line[k]);
     }
 
@@ -129,11 +119,7 @@
      y0 = this.g(0,0,m,0);
      x1 = this.f(0,this.n_max+1-m,m,0);
      y1 = this.g(0,this.n_max+1-m,m,0);
-     p = 'M ' + x0 + ' ' + y0 + ' L ' + x1 + ' ' + y1;
-     this.m_line[m] = document.createElementNS('http://www.w3.org/2000/svg', 'path');
-     this.m_line[m].setAttribute('stroke','#DDDDDD');
-     this.m_line[m].setAttribute('stroke-width',4);
-     this.m_line[m].setAttribute('d',p);
+     this.m_line[m] = comb.svg.line(x0,y0,x1,y1,'#DDDDDD',4);
      this.main_svg.appendChild(this.m_line[m]);
     }
 
@@ -147,13 +133,8 @@
       x.k = k;
       x.m = n - k;
       x.val = k+1;
-      x.text = document.createElementNS('http://www.w3.org/2000/svg', 'text');
-      x.text.setAttribute('x',this.f(0.7,k,n-k,0) + 'px');
-      x.text.setAttribute('y',this.g(0.7,k,n-k,0) + 'px');
-      x.text.setAttribute('text-anchor','middle');
-      x.text.setAttribute('font-size','24px');
+      x.text = comb.svg.math_text(x.val,this.f(0.7,k,n-k,0),this.g(0.7,k,n-k,0));
       x.text.setAttribute('visibility','hidden');
-      x.text.textContent = x.val;
       this.main_svg.appendChild(x.text);
 
       x.box = document.createElementNS('http://www.w3.org/2000/svg', 'path');
@@ -277,12 +258,12 @@
  <body onload="demo.init()">
   <div id="frame">
    <div class="text" style="left:20px;top:20px;">How many nested subtriangles?</div>
-   <div id="partial" class="text" style="left:800px;top:200px;"></div>
-   <svg id="main_svg" width="1200" height="650"></svg>
+   <div id="partial_div" class="text" style="left:800px;top:200px;"></div>
+   <svg id="main_svg" width="1200" height="600"></svg>
    <div id="vals_div"></div>
    <div id="controls_div">
-    <div class="control" id="random">Random</div>
-    <div class="control" id="count">Count</div>
+    <div class="control" id="random_button">Random</div>
+    <div class="control" id="count_button">Count</div>
    </div>
    <div id="msg_div">
     <div id="random_msg">We want to find the number of upward-pointing subtriangles (of any size) nested inside the big triangle.
@@ -290,6 +271,9 @@
     <div id="count_msg" style="display:none">
      In each subtriangle $T$ of size one, we have written the number of subtriangles that have $T$ as the bottom right corner.  Thus, the total number of subtriangles is the sum of all the numbers.  We saw before that that sum is $\left(\begin{matrix}N+2\\3\end{matrix}\right)$, where $N$ is the number of rows.
     </div>
+   </div>
+   <div class="youtube_link">
+    <img id="youtube_button" src="video_icon.png" height="40px"/>
    </div>
   </div>
  </body>
