--- a/subsets.html
+++ b/subsets.html
@@ -11,6 +11,8 @@
     tex2jax: {inlineMath: [["$","$"]]}
    });
   </script> 
+  <script src="youtube_keys.js"></script>  
+  <script src="comb.js"></script>  
   <style type="text/css">
    div#main_div { 
     position:absolute; 
@@ -40,31 +42,29 @@
   </style>
   <script type="text/javascript">
 
-   var subset = {};
-   subset.elts = [];
-   subset.x = 0;
-   subset.y = 0;
-   subset.string = '';
-   subset.full_string = '{}';
-   subset.last = -1;
+   var demo = Object.create(comb.demo);
 
-   var subsets = {};
+   demo.name = 'subsets';
+   
+   demo.subset = {
+    elts : [], x : 0, y : 0, string : '', full_string : '{}', last : -1
+   };
 
-   subsets.offset = {
+   demo.offset = {
     1 : [2,0],
     2 : [0,2],
     3 : [4,0],
     4 : [0,4]
    };
 
-   subsets.xscale = 80;
-   subsets.yscale = 50;
+   demo.xscale = 80;
+   demo.yscale = 50;
 
-   subsets.f = function(i,j) { return Math.round((i+1.5) * this.xscale); };
-   subsets.g = function(i,j) { return Math.round((j+1.5) * this.yscale); };
-   subsets.fg = function(i,j) { return {'x' : this.f(i,j), 'y' : this.g(i,j)}; };
+   demo.f = function(i,j) { return Math.round((i+1.5) * this.xscale); };
+   demo.g = function(i,j) { return Math.round((j+1.5) * this.yscale); };
+   demo.fg = function(i,j) { return {'x' : this.f(i,j), 'y' : this.g(i,j)}; };
 
-   subsets.set_d = function(p,u) {
+   demo.set_d = function(p,u) {
     var n = u.length;
     var z = this.fg(u[0][0],u[0][1]);
     var s = 'M ' + z.x + ' ' + z.y;
@@ -75,22 +75,23 @@
     p.setAttribute('d',s);
    }
 
-   subsets.msg = {};
+   demo.msg = {};
 
-   subsets.msg[1] = 'There are two subsets of the set $\\{1\\}$: the empty set $\\emptyset=\\{\\}$ and the full set $\\{1\\}$.';
-   subsets.msg[2] = 'To get a subset of $\\{1,2\\}$, we take a subset of $\\{1\\}$ (above the dotted line) and either leave it as it is, or add in the element $2$. <br/> So there are twice as many subset of $\\{1,2\\}$ as of $\\{1\\}$.  The total number is $4=2^2$.';
-   subsets.msg[3] = 'To get a subset of $\\{1,2,3\\}$, we take a subset of $\\{1,2\\}$ (to the left of the dotted line) and either leave it as it is, or add in the element $3$. <br/> So there are twice as many subset of $\\{1,2,3\\}$ as of $\\{1,2\\}$.  The total number is $8=2^3$.';
-   subsets.msg[4] = 'To get a subset of $\\{1,2,3,4\\}$, we take a subset of $\\{1,2,3\\}$ (above the dotted line) and either leave it as it is, or add in the element $4$. <br/> So there are twice as many subset of $\\{1,2,3,4\\}$ as of $\\{1,2,3\\}$.  The total number is $16=2^4$.  <br/><br/> In general, a set of size $n$ has $2^n$ different subsets.';
+   demo.msg[1] = 'There are two subsets of the set $\\{1\\}$: the empty set $\\emptyset=\\{\\}$ and the full set $\\{1\\}$.';
+   demo.msg[2] = 'To get a subset of $\\{1,2\\}$, we take a subset of $\\{1\\}$ (above the dotted line) and either leave it as it is, or add in the element $2$. <br/> So there are twice as many subset of $\\{1,2\\}$ as of $\\{1\\}$.  The total number is $4=2^2$.';
+   demo.msg[3] = 'To get a subset of $\\{1,2,3\\}$, we take a subset of $\\{1,2\\}$ (to the left of the dotted line) and either leave it as it is, or add in the element $3$. <br/> So there are twice as many subset of $\\{1,2,3\\}$ as of $\\{1,2\\}$.  The total number is $8=2^3$.';
+   demo.msg[4] = 'To get a subset of $\\{1,2,3,4\\}$, we take a subset of $\\{1,2,3\\}$ (above the dotted line) and either leave it as it is, or add in the element $4$. <br/> So there are twice as many subset of $\\{1,2,3,4\\}$ as of $\\{1,2,3\\}$.  The total number is $16=2^4$.  <br/><br/> In general, a set of size $n$ has $2^n$ different subsets.';
 
-   subsets.init = function() {
+   demo.init = function() {
     var e,i,j,k,dx,dy,old_sets;
 
-    this.main_svg = document.getElementById('main_svg');
-    this.msg_div  = document.getElementById('msg_div');
+    var me = this;
+
+    this.find_ids([]);
     this.stage = 1;
 
     this.sets = [];
-    e = Object.create(subset);
+    e = Object.create(this.subset);
     e.elts = [];
     e.x = 0;
     e.y = 0;
@@ -104,7 +105,7 @@
      old_sets = this.sets;
      for(j in old_sets) {
       e = old_sets[j];
-      f = Object.create(subset);
+      f = Object.create(this.subset);
       f.elts = e.elts.concat([i]);
       f.x = e.x + dx;
       f.y = e.y + dy;
@@ -117,13 +118,7 @@
 
     for (i in this.sets) {
      e = this.sets[i];
-     e.text = document.createElementNS('http://www.w3.org/2000/svg', 'text');
-     e.text.className = 'set';		 
-     e.text.setAttribute('x',this.f(e.x,e.y));
-     e.text.setAttribute('y',this.g(e.x,e.y));
-     e.text.setAttribute('font-size','24');
-     e.text.setAttribute('text-anchor','middle');
-     e.text.textContent = e.full_string;
+     e.text = comb.svg.math_text(e.full_string,this.f(e.x,e.y),this.g(e.x,e.y));
      this.main_svg.appendChild(e.text);
     }
 
@@ -167,7 +162,7 @@
     this.set_stage(1);
    };
 
-   subsets.set_stage = function(m) {
+   demo.set_stage = function(m) {
     this.stage = m;
     for (i in this.sets) {
      e = this.sets[i];
@@ -191,26 +186,29 @@
     }
    }
 
-   subsets.next = function() {
+   demo.next = function() {
     if (this.stage < 4) {
      this.set_stage(this.stage + 1);
     }
    }
 
-   subsets.previous = function() {
+   demo.previous = function() {
     if (this.stage > 1) {
      this.set_stage(this.stage - 1);
     }
    }
   </script>
  </head>
- <body onload="subsets.init()">
+ <body onload="demo.init()">
   <div id="frame">
    <svg id="main_svg" width="800" height="500"></svg>
    <div id="msg_div"></div>
    <div id="controls_div">
-    <div class="control" id="previous" onclick="subsets.previous()">Previous</div>
-    <div class="control" id="next" onclick=subsets.next()>Next</div>
+    <div class="control" id="previous" onclick="demo.previous()">Previous</div>
+    <div class="control" id="next" onclick="demo.next()">Next</div>
+   </div>
+   <div class="youtube_link">
+    <img id="youtube_button" src="video_icon.png" height="40px"/>
    </div>
   </div>
  </body>
